Majhne spremembe za boljse razumevanje

--- a/koda/templates/shema.html
+++ b/koda/templates/shema.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Moja testna stran</title>
+    <title>Naša testna stran</title>
     <style>
         h1, h2 {
             color: #2680d1;
@@ -48,8 +48,8 @@
 </head>
 <body>
 <div id="stran">
-    <h1>
-        Moja testna stran
+  <h1>
+    Naša testna stran
     </h1>
     <p id="navigation">
         <a href="/">Domov</a>
