--- a/koda/templates/shema.html
+++ b/koda/templates/shema.html
@@ -1,50 +1,8 @@
 <html>
 <head>
-    <title>Naša testna stran</title>
-    <style>
-        h1, h2 {
-            color: #2680d1;
-        }
-        body {
-            /*background-color: white;*/
-        }
-        #stran {
-            width: 800px;
-            margin: auto;
-            background-color: #eee;
-            padding: 10px;
-        }
-        #navigation {
-            /*border-color: #2680d1;*/
-            border-style: solid none solid none;
-            /*border-width: 1px;*/
-            padding-top: 0.5em;
-            padding-bottom: 0.5em;
-        }
-        #navigation a {
-            text-decoration: none;
-            color: black;
-            padding-right: 1em;
-            /*font-size: larger;*/
-            /*background-color: #2680d1;*/
-        }
-        #navigation a:hover {
-            color: #2680d1;
-        }
-        table, td, th {
-            border: 1px solid grey;
-            border-collapse: collapse;
-        }
-        p {text-align: center;}
-        .center {text-align: center;}
-        p.error {
-            color: red;
-            background-color: #f3babd;
-            padding: 0.2em;
-            border-radius: 10px;
-            border: red 1px solid;
-        }
-    </style>
+  <title>Naša testna stran</title>
+  <link rel="stylesheet" type="text/css" href="/static/style.css">
+  <!-- style mogoce ne bo delov tkole -->
 </head>
 <body>
 <div id="stran">
