Malce spremenil en komentar

--- a/koda/templates/shema.html
+++ b/koda/templates/shema.html
@@ -2,7 +2,7 @@
 <head>
   <title>Naša testna stran</title>
   <link rel="stylesheet" type="text/css" href="/static/style.css">
-  <!-- style mogoce ne bo delov tkole -->
+  <!-- style mogoce ne bo delov tkole v productionu -->
 </head>
 <body>
 <div id="stran">
