uredil login in registracijo, spremenil html da uporablja bootstrap, dodal config

--- a/koda/templates/domaca_stran.html
+++ b/koda/templates/domaca_stran.html
@@ -1,6 +1,10 @@
-{% extends 'shema.html' %}
-{% block podnaslov %}Sucks to be you, you have to solve this{% endblock %}
-{% block vsebina %}
+{% extends "bootstrap/base.html" %}
+
+{% block title %}
+Kemijske spojine
+{% endblock %}
+
+{% block content %}
     <div class="center">
     <p>
         <h2>Poimenuj spojine!</h2>
