dodal navigacijski meni, UTF-8 in css

--- a/koda/templates/domaca_stran.html
+++ b/koda/templates/domaca_stran.html
@@ -1,8 +1,4 @@
-{% extends "bootstrap/base.html" %}
-
-{% block title %}
-Kemijske spojine
-{% endblock %}
+{% extends "shema.html" %}
 
 {% block content %}
     <div class="center">
