--- a/koda/templates/login.html
+++ b/koda/templates/login.html
@@ -1,9 +1,5 @@
-{% extends "bootstrap/base.html" %}
+{% extends "shema.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-
-{% block title %}
-Login
-{% endblock %}
 
 {% block content %}
     <div class="container">
