--- a/koda/templates/register.html
+++ b/koda/templates/register.html
@@ -1,9 +1,5 @@
-{% extends "bootstrap/base.html" %}
+{% extends "shema.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-
-{% block title %}
-Sign Up
-{% endblock %}
 
 {% block content %}
 <div class="container">
