naredu nov branch za razvijanje oautha

--- a/koda/templates/login.html
+++ b/koda/templates/login.html
@@ -14,4 +14,9 @@
       </form>
 
     </div> <!-- /container -->
+    <div class="github">
+        <a href="{{ url_for('github.login') }}">
+            login with github
+        </a>
+    </div>
 {% endblock %}
