Dodana osnovna baza in način, da se jo regenerira

--- a/koda/templates/vprasanja.html
+++ b/koda/templates/vprasanja.html
@@ -7,6 +7,7 @@
         <h2>Poimenuj spojine!</h2>
     </p>
     <p>
+        {{ score }}
     	<form class="form-answer" method="POST">
     	{{ form.hidden_tag() }}
         {{spojine[0]|safe}}<br>
