posodobil na imena(), popravil nekaj bugov

--- a/koda/templates/vislice.html
+++ b/koda/templates/vislice.html
@@ -7,6 +7,7 @@
     <p>
         <h2>Poimenuj spojine!</h2>
     </p>
+    {{score}}
     <p>
     	<form class="form-answer" method="POST">
     	{{ form.hidden_tag() }}
