--- a/koda/templates/login.html
+++ b/koda/templates/login.html
@@ -2,6 +2,17 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <ul class="flash">
+    {% for category, message in messages %}
+      <li class="{{ category }}">{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+<br>
     <div class="container">
 
       <form class="form-signin" method="POST" action="/login">
@@ -12,6 +23,8 @@
         {{ wtf.form_field(form.remember) }}
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
+
+        <button type="submit"><a href="{{ url_for("facebook.login") }}">Login with Facebook!</a></button>
 
     </div> <!-- /container -->
 {% endblock %}
