--- a/koda/templates/register.html
+++ b/koda/templates/register.html
@@ -13,6 +13,6 @@
         {{ wtf.form_field(form.email) }}
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
   </form>
-
+  	<button type="submit"><a href="{{ url_for("facebook.login") }}">Register with Facebook!</a></button>
 </div> <!-- /container -->
 {% endblock %}
