--- a/koda/templates/domaca_stran.html
+++ b/koda/templates/domaca_stran.html
@@ -16,29 +16,10 @@
     <p>
         <h2>Poimenuj spojine!</h2>
     </p>
-    <p>
-        <form method="POST">
-            {{spojine[0]}}
-            <br>
-            <input placeholder="Ime spojine" type="text" name="ime1"><br>
-            {{spojine[1]}}
-            <br>
-            <input placeholder="Ime spojine" type="text" name="ime2"><br>
-            {{spojine[2]}}
-            <br>
-            <input placeholder="Ime spojine" type="text" name="ime3"><br>
-            <input type="submit" value="Preveri">
-        </form>
-    </p>
-    <p>
-        {% if prou %}
-            <h3>Bravoooo!</h3>
-        {%elif prou == None %}
-        {%else%}
-            <h3>Narobe, probi se enkrat.</h3>
-        {%endif %}
-    </p>
+
+
 
 </div>
+{{super()}}
 {% endblock %}
 
