--- a/koda/templates/login.html
+++ b/koda/templates/login.html
@@ -24,7 +24,7 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 
-        <button type="submit"><a href="{{ url_for("facebook.login") }}">Login with Facebook!</a></button>
+    <a href="{{ url_for("facebook.login") }}"><button type="submit">Login with Facebook!</button></a>
 
     </div> <!-- /container -->
 {% endblock %}
