dodal active linke v navbar, preverjanje vseh prav. odgovorov, razred pri registraciji

--- a/koda/templates/macros.html
+++ b/koda/templates/macros.html
@@ -5,3 +5,12 @@
 	<p class="correct">Pravilno!</p>
 {% endif %}
 {% endmacro %}
+
+{% macro pravilno(arr) %}
+{% if arr[0] == arr[1] %}
+<i class="resitev" style="display:none;">{{arr[0]}}</i>
+{% else %}
+<i class="resitev" style="display:none;">{{arr[0]}}, {{arr[1]}}</i>
+{% endif %}
+{% endmacro %}
+
