--- a/koda/templates/login.html
+++ b/koda/templates/login.html
@@ -1,6 +1,37 @@
 {% extends "shema.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block unauthenticated %}
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="{{url_for('index')}}">Kemijske Spojine</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="{{url_for('index')}}">Domov</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Naloge
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="{{url_for('vislice')}}">Vislice</li>
+          <li class="divider"></li>
+          <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
+          <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
+          <li><a href="{{url_for('kviz', kategorija='kisline')}}">Kisline</a></li>
+          <li><a href="{{url_for('kviz', kategorija='baze')}}">Baze</a></li>
+          <li><a href="{{url_for('kviz', kategorija='kh')}}">Kristalohidrati</a></li>
+        </ul>
+      </li>
+      <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="active"><a href="{{url_for('login')}}"><span class="glyphicon glyphicon-log-in"></span> Prijava</a></li>
+      <li><a href="{{url_for('register')}}"><span class="glyphicon glyphicon-user"></span> Registracija</a></li>
+    </ul>
+  </div>
+</nav>
+{% endblock %}
+
 {% block content %}
 
 {% with messages = get_flashed_messages(with_categories=true) %}
