--- a/koda/templates/shema.html
+++ b/koda/templates/shema.html
@@ -21,67 +21,14 @@ href="{{url_for('.static', filename='style.css')}}">
 
 {% block navbar %}
 	{% if current_user.is_authenticated %}
-		<nav class="navbar navbar-inverse">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">Kemijske Spojine</a>
-	    </div>
-	    <ul class="nav navbar-nav">
-	      <li><a href="#">Domov</a></li>
-	      <li class="dropdown">
-	        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Naloge
-	        <span class="caret"></span></a>
-	        <ul class="dropdown-menu">
-	          <li><a href="{{url_for('vislice')}}">Vislice/a></li>
-	          <li class="divider"></li>
-			  <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
-			  <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
-			  <li><a href="{{url_for('kviz', kategorija='kisline')}}">Kisline</a></li>
-			  <li><a href="{{url_for('kviz', kategorija='baze')}}">Baze</a></li>
-			  <li><a href="{{url_for('kviz', kategorija='kh')}}">Kristalohidrati</a></li>
-	        </ul>
-	      </li>
-	      <li><a href="#">Lestvica</a></li>
-	    </ul>
-	    <ul class="nav navbar-nav navbar-right">
-	      <li><p class="navbar-text">{{current_user.username}}</p></li>
-	      <li><a href="{{url_for('logout')}}"><span class="glyphicon glyphicon-user"></span> Odjava</a></li>
-	    </ul>
-	  </div>
-	</nav>
-
+		{% block authenticated %}
+		{% endblock %}
 	{% else %}
-	<nav class="navbar navbar-inverse">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">Kemijske Spojine</a>
-	    </div>
-	    <ul class="nav navbar-nav">
-	      <li><a href="#">Domov</a></li>
-	      <li class="dropdown">
-	        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Naloge
-	        <span class="caret"></span></a>
-	        <ul class="dropdown-menu">
-	          <li><a href="{{url_for('vislice')}}">Vislice</li>
-	          <li class="divider"></li>
-			  <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
-			  <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
-			  <li><a href="{{url_for('kviz', kategorija='kisline')}}">Kisline</a></li>
-			  <li><a href="{{url_for('kviz', kategorija='baze')}}">Baze</a></li>
-			  <li><a href="{{url_for('kviz', kategorija='kh')}}">Kristalohidrati</a></li>
-	        </ul>
-	      </li>
-	      <li><a href="#">Lestvica</a></li>
-	    </ul>
-	    <ul class="nav navbar-nav navbar-right">
-	      <li><a href="{{url_for('login')}}"><span class="glyphicon glyphicon-log-in"></span> Prijava</a></li>
-	      <li><a href="{{url_for('register')}}"><span class="glyphicon glyphicon-user"></span> Registracija</a></li>
-	    </ul>
-	  </div>
-	</nav>
+		{% block unauthenticated %}
+		{% endblock %}
 	{% endif %}
 
-	{% endblock %}
+{% endblock %}
 
 	{% block scripts%}
 	<script src="{{url_for('.static', filename='scripts.js')}}"> 
