popravil izgled manija, FB gumba

--- a/koda/templates/scores.html
+++ b/koda/templates/scores.html
@@ -88,7 +88,7 @@
     <form class="form-answer" method="POST">
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.razred) }}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Preveri!</button>
+    <button class="btn btn-lg btn-primary" type="submit">Preveri!</button>
     </form>
 </div>
 {% endblock %}
