--- a/koda/templates/register.html
+++ b/koda/templates/register.html
@@ -8,7 +8,7 @@
       <a class="navbar-brand" href="{{url_for('index')}}">Kemijske Spojine</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="{{url_for('index')}}">Domov</a></li>
+      <li><a href="{{url_for('index')}}">Domov</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Naloge
         <span class="caret"></span></a>
@@ -42,8 +42,10 @@
         {{ wtf.form_field(form.username) }}
         {{ wtf.form_field(form.password) }}
         {{ wtf.form_field(form.email) }}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+        {{ wtf.form_field(form.razred) }}
+    <button class="btn btn-lg btn-primary" type="submit">Sign Up</button>
   </form>
-  <a href="{{ url_for("facebook.login") }}"><button type="submit">Register with Facebook!</button></a>
+  <br>
+  <a href="{{ url_for("facebook.login") }}"><button type="submit" class='btn btn-lg btn-fb'><i class="fa fa-facebook fa-fw"></i> Login with Facebook!</button></a>
 </div> <!-- /container -->
 {% endblock %}
