--- a/koda/templates/vislice.html
+++ b/koda/templates/vislice.html
@@ -75,7 +75,7 @@
     	{{ form.hidden_tag() }}
         {{spojina|safe}}<br>
         {{ wtf.form_field(form.o0) }}
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
         </form>
     </p>
 </div>
