se malo uredil navbar, form in gumbe, dodal bootstrap-css-docs

--- a/koda/static/navbar.css
+++ b/koda/static/navbar.css
@@ -9,7 +9,7 @@
     color: #FFF;
 }
 .navbar-inverse .navbar-text {
-    color: #FFF;
+    color: #FFF; 
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
@@ -38,19 +38,19 @@
 }
 /* Caret */
 .navbar-inverse .navbar-nav > .dropdown > a .caret {
-    border-top-color: #777;
-    border-bottom-color: #777;
+    border-top-color: #FFF;
+    border-bottom-color: #FFF;
 }
 .navbar-inverse .navbar-nav > .dropdown > a:hover .caret,
 .navbar-inverse .navbar-nav > .dropdown > a:focus .caret {
-    border-top-color: #333;
-    border-bottom-color: #333;
+    border-top-color: #FFF;
+    border-bottom-color: #FFF;
 }
 .navbar-inverse .navbar-nav > .open > a .caret,
 .navbar-inverse .navbar-nav > .open > a:hover .caret,
 .navbar-inverse .navbar-nav > .open > a:focus .caret {
-    border-top-color: #555;
-    border-bottom-color: #555;
+    border-top-color: #FFF;
+    border-bottom-color: #FFF;
 }
 /* Mobile version */
 .navbar-inverse .navbar-toggle {
@@ -71,4 +71,40 @@
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
           color: #333;
     }
+}
+
+.nav {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.nav > li {
+  position: relative;
+  display: block;
+}
+.nav > li > a {
+  position: relative;
+  display: block;
+  padding: 15px;
+}
+.nav > li > a:hover,
+.nav > li > a:focus {
+  text-decoration: none;
+  background-color: #eee;
+}
+.nav > li.disabled > a {
+  color: #777;
+}
+.nav > li.disabled > a:hover,
+.nav > li.disabled > a:focus {
+  color: #777;
+  text-decoration: none;
+  cursor: not-allowed;
+  background-color: transparent;
+}
+.nav .open > a,
+.nav .open > a:hover,
+.nav .open > a:focus {
+  background-color: #eee;
+  border-color: #337ab7;
 }
