--- a/koda/templates/scores.html
+++ b/koda/templates/scores.html
@@ -13,7 +13,7 @@
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Naloge
     <span class="caret"></span></a>
     <ul class="dropdown-menu">
-      <li><a href="{{url_for('vislice')}}">Vislice</li>
+      <li><a href="{{url_for('vislice')}}">Vislice</a></li>
       <li class="divider"></li>
       <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
       <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
@@ -44,7 +44,7 @@
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Naloge
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="{{url_for('vislice')}}">Vislice</li>
+          <li><a href="{{url_for('vislice')}}">Vislice</a></li>
           <li class="divider"></li>
           <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
           <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
