--- a/koda/templates/vprasanja.html
+++ b/koda/templates/vprasanja.html
@@ -14,7 +14,7 @@
     <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Naloge
     <span class="caret"></span></a>
     <ul class="dropdown-menu">
-      <li><a href="{{url_for('vislice')}}">Vislice</li>
+      <li><a href="{{url_for('vislice')}}">Vislice</a></li>
       <li class="divider"></li>
       <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
       <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
@@ -45,7 +45,7 @@
         <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Naloge
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="{{url_for('vislice')}}">Vislice</li>
+          <li><a href="{{url_for('vislice')}}">Vislice</a></li>
           <li class="divider"></li>
           <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
           <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
