--- a/koda/templates/vprasanja.html
+++ b/koda/templates/vprasanja.html
@@ -9,7 +9,7 @@
   <a class="navbar-brand" href="{{url_for('index')}}">Kemijske Spojine</a>
 </div>
 <ul class="nav navbar-nav">
-  <lclass="active"><a href="{{url_for('index')}}">Domov</a></li>
+  <li><a href="{{url_for('index')}}">Domov</a></li>
   <li class="dropdown">
     <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Naloge
     <span class="caret"></span></a>
