--- a/koda/templates/vprasanja.html
+++ b/koda/templates/vprasanja.html
@@ -89,7 +89,7 @@
         {{spojine[4]|safe}}&nbsp; -> &nbsp;<b>{{odgovori[4]}}</b><br>
         {{pravilno(pravilni[4])}}
         {{empty(napake[4])}}
-        <button class="btn btn-lg btn-primary" type="submit" onClick="window.location.reload()"> Nove spojine</button>
+        <button class="btn btn-lg btn-primary" type="submit" onClick="window.location.replace(location.pathname);"> Nove spojine</button>
         <button onclick="show_item()">Prikaži pravilne odgovore!</button>
 
         {% else %}
