dodal da lahko izberes tezavnost in vrsto vprasanj

--- a/koda/templates/vprasanja.html
+++ b/koda/templates/vprasanja.html
@@ -16,11 +16,11 @@
     <ul class="dropdown-menu">
       <li><a href="{{url_for('vislice')}}">Vislice</a></li>
       <li class="divider"></li>
-      <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
-      <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
-      <li><a href="{{url_for('kviz', kategorija='kisline')}}">Kisline</a></li>
-      <li><a href="{{url_for('kviz', kategorija='baze')}}">Baze</a></li>
-      <li><a href="{{url_for('kviz', kategorija='kh')}}">Kristalohidrati</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='binarne')}}">Binarne spojine</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='soli')}}">Soli</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
     </ul>
   </li>
   <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
@@ -47,11 +47,11 @@
         <ul class="dropdown-menu">
           <li><a href="{{url_for('vislice')}}">Vislice</a></li>
           <li class="divider"></li>
-          <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
-          <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
-          <li><a href="{{url_for('kviz', kategorija='kisline')}}">Kisline</a></li>
-          <li><a href="{{url_for('kviz', kategorija='baze')}}">Baze</a></li>
-          <li><a href="{{url_for('kviz', kategorija='kh')}}">Kristalohidrati</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='binarne')}}">Binarne spojine</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='soli')}}">Soli</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
         </ul>
       </li>
       <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
