--- a/koda/templates/kviz.html
+++ b/koda/templates/kviz.html
@@ -14,11 +14,11 @@
     <ul class="dropdown-menu">
       <li><a href="{{url_for('vislice')}}">Vislice</a></li>
       <li class="divider"></li>
-      <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
-      <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
-      <li><a href="{{url_for('kviz', kategorija='kisline')}}">Kisline</a></li>
-      <li><a href="{{url_for('kviz', kategorija='baze')}}">Baze</a></li>
-      <li><a href="{{url_for('kviz', kategorija='kh')}}">Kristalohidrati</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='binarne')}}">Binarne spojine</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='soli')}}">Soli</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
+      <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
     </ul>
   </li>
   <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
@@ -45,11 +45,11 @@
         <ul class="dropdown-menu">
           <li><a href="{{url_for('vislice')}}">Vislice</a></li>
           <li class="divider"></li>
-          <li><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
-          <li><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
-          <li><a href="{{url_for('kviz', kategorija='kisline')}}">Kisline</a></li>
-          <li><a href="{{url_for('kviz', kategorija='baze')}}">Baze</a></li>
-          <li><a href="{{url_for('kviz', kategorija='kh')}}">Kristalohidrati</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='binarne')}}">Binarne spojine</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='soli')}}">Soli</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
         </ul>
       </li>
       <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
@@ -72,11 +72,11 @@
     </p>
     <p>
       <ul class="list-group">
-      <li class="list-group-item"><a href="{{url_for('kviz', kategorija='binarne')}}">Binarne spojine</a></li>
-      <li class="list-group-item"><a href="{{url_for('kviz', kategorija='soli')}}">Soli</a></li>
-      <li class="list-group-item"><a href="{{url_for('kviz', kategorija='baze')}}">Baze</a></li>
-      <li class="list-group-item"><a href="{{url_for('kviz', kategorija='kisline')}}">Kisline</a></li>
-      <li class="list-group-item"><a href="{{url_for('kviz', kategorija='kh')}}">Kristalohidrati</a></li>
+      <li class="list-group-item"><a href="{{url_for('izberi_vrsto', kategorija='binarne')}}">Binarne spojine</a></li>
+      <li class="list-group-item"><a href="{{url_for('izberi_vrsto', kategorija='soli')}}">Soli</a></li>
+      <li class="list-group-item"><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
+      <li class="list-group-item"><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
+      <li class="list-group-item"><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
       </ul>
     </p>
 </div>
