dodal da ti daje imena in mors odgovorit formule

--- a/koda/templates/vprasanja.html
+++ b/koda/templates/vprasanja.html
@@ -72,7 +72,7 @@
         <h2>Poimenuj spojine!</h2>
     </p>
     <p>
-        {% if post %}
+        {% if odgovori %}
         {{ score }}{{napake}}<br>
         {{spojine[0]|safe}}&nbsp; -> &nbsp;<b>{{odgovori[0]}}</b><br>
         {{pravilno(pravilni[0])}}
