--- a/koda/templates/macros.html
+++ b/koda/templates/macros.html
@@ -15,10 +15,14 @@
 {% endmacro %}
 
 {% macro pravilno(arr) %}
-{% if arr[0] == arr[1] %}
-    <i class="resitev" style="display: none;">{{arr[0]}}</i>
+{% if type(arr) == 'list'  %}
+	{% if arr[0] == arr[1] %}
+	    <i class="resitev" style="display: none;">{{arr[0]}}</i>
+	{% else %}
+		<i class="resitev" style="display: none;">{{arr[0]}}, {{arr[1]}}</i>
+	{% endif %}
 {% else %}
-	<i class="resitev" style="display: none;">{{arr[0]}}, {{arr[1]}}</i>
+		<i class="resitev" style="display: none;">{{arr|safe}}</i>
 {% endif %}
 {% endmacro %}
 
