--- a/koda/templates/admin/base.html
+++ b/koda/templates/admin/base.html
@@ -3,30 +3,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% block title %}{% if admin_view.category %}{{ admin_view.category }} - {% endif %}{{ admin_view.name }} - {{ admin_view.admin.name }}{% endblock %}</title>
+    <title>{% block title %}Kemijske spojine - Admin{% endblock %}</title>
     {% block head_meta %}
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="description" content="Spletna aplikacija za poimenovanje kemijskih spojin">
+        <meta name="author" content="Tajda Černigoj, Luka Peršolja, Patrik Žnidaršič">
     {% endblock %}
     {% block head_css %}
-        <link href="{{ admin_static.url(filename='bootstrap/bootstrap3/swatch/{swatch}/bootstrap.min.css'.format(swatch=config.get('FLASK_ADMIN_SWATCH', 'default')), v='3.3.5') }}" rel="stylesheet">
-        {%if config.get('FLASK_ADMIN_SWATCH', 'default') == 'default' %}
-        <link href="{{ admin_static.url(filename='bootstrap/bootstrap3/css/bootstrap-theme.min.css', v='3.3.5') }}" rel="stylesheet">
-        {%endif%}
-        <link href="{{ admin_static.url(filename='admin/css/bootstrap3/admin.css', v='1.1.1') }}" rel="stylesheet">
+        <link href="{{bootstrap_find_resource('css/bootstrap.css', cdn='bootstrap')}}" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='navbar.css')}}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         {% if admin_view.extra_css %}
           {% for css_url in admin_view.extra_css %}
             <link href="{{ css_url }}" rel="stylesheet">
           {% endfor %}
         {% endif %}
-        <style>
-        body {
-            padding-top: 4px;
-        }
-        </style>
     {% endblock %}
     {% block head %}
     {% endblock %}
@@ -35,8 +29,8 @@
   </head>
   <body>
     {% block page_body %}
-    <div class="container{%if config.get('FLASK_ADMIN_FLUID_LAYOUT', False) %}-fluid{% endif %}">
-      <nav class="navbar navbar-default" role="navigation">
+    <!-- <div class="container{%if config.get('FLASK_ADMIN_FLUID_LAYOUT', False) %}-fluid{% endif %}"> -->
+      <nav class="navbar navbar-inverse" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#admin-navbar-collapse">
@@ -46,7 +40,7 @@
             <span class="icon-bar"></span>
           </button>
           {% block brand %}
-          <a class="navbar-brand" href="{{ admin_view.admin.url }}">{{ admin_view.admin.name }}</a>
+            <a class="navbar-brand" href="{{ admin_view.admin.url }}">Kemijske spojine - Admin</a>
           {% endblock %}
         </div>
         <!-- navbar content -->
@@ -58,31 +52,34 @@
           {% endblock %}
 
           {% block menu_links %}
-          <ul class="nav navbar-nav navbar-right">
-            {{ layout.menu_links() }}
-          </ul>
+
           {% endblock %}
+
           {% block access_control %}
+          <ul class="nav navbar-nav navbar-right">
+            <li><p class="navbar-text">{{current_user.username}}</p></li>
+            <li><a href="{{url_for('logout')}}"><span class="glyphicon glyphicon-user"></span> Odjava</a></li>
+          </ul>
           {% endblock %}
         </div>
       </nav>
-
+<div class="center">
       {% block messages %}
       {{ layout.messages() }}
       {% endblock %}
 
       {# store the jinja2 context for form_rules rendering logic #}
       {% set render_ctx = h.resolve_ctx() %}
-
-      {% block body %}{% endblock %}
-    </div>
+      {% block body %}
+      {% endblock %}
+      </div>
+    <!-- </div> -->
     {% endblock %}
 
     {% block tail_js %}
-    <script src="{{ admin_static.url(filename='vendor/jquery.min.js', v='2.1.4') }}" type="text/javascript"></script>
-    <script src="{{ admin_static.url(filename='bootstrap/bootstrap3/js/bootstrap.min.js', v='3.3.5') }}" type="text/javascript"></script>
-    <script src="{{ admin_static.url(filename='vendor/moment.min.js', v='2.9.0') }}" type="text/javascript"></script>
-    <script src="{{ admin_static.url(filename='vendor/select2/select2.min.js', v='3.5.2') }}" type="text/javascript"></script>
+    <script src="{{url_for('static', filename='scripts.js')}}"></script>
+    <script src="{{bootstrap_find_resource('jquery.js', cdn='jquery')}}"></script>
+    <script src="{{bootstrap_find_resource('js/bootstrap.js', cdn='bootstrap')}}"></script>
     {% if admin_view.extra_js %}
       {% for js_url in admin_view.extra_js %}
         <script src="{{ js_url }}" type="text/javascript"></script>
@@ -92,5 +89,13 @@
 
     {% block tail %}
     {% endblock %}
+    <footer>
+    <div class="footer-left">
+      &copy; Tajda Černigoj, Luka Peršolja, Patrik Žnidaršič
+    </div>
+    <div class="footer-right">
+      Gimnazija Vič
+    </div>
+  </footer>
   </body>
 </html>
