--- a/koda/templates/admin/index.html
+++ b/koda/templates/admin/index.html
@@ -1,6 +1,5 @@
-{% extends 'admin/master.html' %}
+{% extends 'admin/base.html' %}
 
 {% block body %}
-  <p>Hello world</p>
-  {{admin_base_template}}
+burekburekburek
 {% endblock %}
