--- a/koda/templates/shema.html
+++ b/koda/templates/shema.html
@@ -29,15 +29,17 @@
 	{% endif %}
     {%- endblock navbar %}
 
-    {% block content -%}
-    {%- endblock content %}
+    <div class="center">
+        {% block content -%}
+        {%- endblock content %}
+    </div>
 
     <footer>
 		<div class="footer-left">
 			&copy; Tajda Černigoj, Luka Peršolja, Patrik Žnidaršič
 		</div>
 		<div class="footer-right">
-			Gimnazija Vič
+			Gimnazija Vič 2018/2019
 		</div>
 	</footer>
 
