--- a/koda/templates/scores.html
+++ b/koda/templates/scores.html
@@ -20,6 +20,7 @@
       <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
       <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
       <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='hs')}}">Hidrogensoli</a></li>
     </ul>
   </li>
   <li class="active"><a href="{{url_for('lestvica')}}">Lestvica</a></li>
@@ -51,6 +52,7 @@
           <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
           <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
           <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='hs')}}">Hidrogensoli</a></li>
         </ul>
       </li>
       <li class="active"><a href="{{url_for('lestvica')}}">Lestvica</a></li>
