--- a/koda/templates/tezavnost.html
+++ b/koda/templates/tezavnost.html
@@ -19,6 +19,7 @@
       <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
       <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
       <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='hs')}}">Hidrogensoli</a></li>
     </ul>
   </li>
   <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
@@ -50,6 +51,7 @@
           <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
           <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
           <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='hs')}}">Hidrogensoli</a></li>
         </ul>
       </li>
       <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
