--- a/koda/templates/vprasanja.html
+++ b/koda/templates/vprasanja.html
@@ -21,6 +21,7 @@
       <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
       <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
       <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='hs')}}">Hidrogensoli</a></li>
     </ul>
   </li>
   <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
@@ -52,6 +53,7 @@
           <li><a href="{{url_for('izberi_vrsto', kategorija='kisline')}}">Kisline</a></li>
           <li><a href="{{url_for('izberi_vrsto', kategorija='baze')}}">Baze</a></li>
           <li><a href="{{url_for('izberi_vrsto', kategorija='kh')}}">Kristalohidrati</a></li>
+          <li><a href="{{url_for('izberi_vrsto', kategorija='hs')}}">Hidrogensoli</a></li>
         </ul>
       </li>
       <li><a href="{{url_for('lestvica')}}">Lestvica</a></li>
