--- a/koda/static/navbar.css
+++ b/koda/static/navbar.css
@@ -54,22 +54,23 @@
 }
 /* Mobile version */
 .navbar-inverse .navbar-toggle {
-    border-color: #DDD;
+    border-color: #1e66a6;
 }
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
     background-color: #1e66a6;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
-    background-color: #1e66a6;
+    background-color: #ddd;
 }
 @media (max-width: 767px) {
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
-        color: #777;
+        color: #FFF;
     }
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
-          color: #333;
+          color: #FFF
+          ;
     }
 }
 
@@ -108,3 +109,4 @@
   background-color: #eee;
   border-color: #337ab7;
 }
+
